margin bottom added to open text to avoid overlap on deployed app

--- a/main.css
+++ b/main.css
@@ -111,6 +111,7 @@ color: orange
   font-size: 2em;
   text-align: center;
   margin: 15px;
+  margin-bottom: 10px;
   padding: 10px;
   border: 2px solid #5e7fdb;
   border-radius: 15px;
